fix(collision): bound canonical collection codecs